js/js.translator/testData/incremental/invalidation/functionTypeInterface/lib2/l2b.5.kt
fun doTest(): String {
    return getString() + "_"
}
